--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,6 +1,5 @@
 @font-face {
-  font-family: "Rubik";
+  font-family: 'Rubik';
   src: url("./Rubik-Regular.ttf");
 }
-
 /*# sourceMappingURL=fonts.css.map */
