--- a/sass/style.sass
+++ b/sass/style.sass
@@ -64,8 +64,6 @@ header
   position: absolute
   top: 35px
   right: 125px
-  h3
-    border-bottom: 1px solid #E5E7EF
 
 main
   height: auto
@@ -244,7 +242,7 @@ footer
     border: none
     box-shadow: none
     line-height: 55px
-    padding-left: 35px
+    padding-left: 50px
     color: #ffffff
     font-size: 15px
 
@@ -254,8 +252,28 @@ footer
     top: 42px
 
 .form-mail__ico
-  left: 5px
+  left: 15px
 
 .form-send
   right: 15px
   cursor: pointer
+
+.active-page
+  h3
+    border-bottom: 1px solid #E5E7EF
+
+.item-page
+  width: 100%
+  height: 100%
+  position: relative
+  img
+    position: absolute
+    top: 50%
+    left: 25%
+    transform: translate(0%, -50%)
+
+.page-controls
+  width: 370px
+  position: absolute
+  top: 80px
+  right: 0
