--- a/sass/style.css
+++ b/sass/style.css
@@ -410,6 +410,7 @@ footer {
   width: 100%;
   height: 100%;
   position: relative;
+  background: #EBEBEB;
 }
 
 .item-page img {
@@ -425,5 +426,45 @@ footer {
   position: absolute;
   top: 80px;
   right: 0;
+  height: calc(100% - 80px);
+  z-index: 1;
+  background: #fff;
+}
+
+.page-controls h3 {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #202525;
+}
+
+.page-controls p {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #404165;
+}
+
+.page-controls button {
+  background: #212121;
+  border-radius: 4px;
+  width: 300px;
+  height: 70px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: 3.6px;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 /*# sourceMappingURL=style.css.map */
