--- a/sass/style.sass
+++ b/sass/style.sass
@@ -266,6 +266,7 @@ footer
   width: 100%
   height: 100%
   position: relative
+  background: #EBEBEB
   img
     position: absolute
     top: 50%
@@ -277,3 +278,36 @@ footer
   position: absolute
   top: 80px
   right: 0
+  height: calc(100% - 80px)
+  z-index: 1
+  background: #fff
+  h3
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 500
+    font-size: 24px
+    line-height: 36px
+    color: #202525
+  p
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 400   
+    font-size: 16px
+    line-height: 24px
+    color: #404165
+  button
+    background: #212121
+    border-radius: 4px
+    width: 300px
+    height: 70px
+    box-shadow: none
+    border: none
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 500
+    font-size: 24px
+    line-height: 28px
+    text-align: center
+    letter-spacing: 3.6px
+    text-transform: uppercase
+    color: #FFFFFF
