--- a/sass/style.css
+++ b/sass/style.css
@@ -467,4 +467,74 @@ footer {
   text-transform: uppercase;
   color: #FFFFFF;
 }
+
+.search-result {
+  position: fixed;
+  top: 65px;
+  left: 175px;
+  width: 300px;
+  min-height: 80px;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.search-result img {
+  width: 80px;
+  height: 80px;
+}
+
+.search-result div {
+  width: 100%;
+  height: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  cursor: pointer;
+}
+
+.search-result div:nth-child(odd) {
+  background: rgba(235, 235, 235, 0.8);
+}
+
+.search-result div:last-child {
+  border-radius: 0px 0px 10px 10px;
+}
+
+.search-result p {
+  font-family: "Rubik", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.search-result h3 {
+  font-size: 16px;
+}
 /*# sourceMappingURL=style.css.map */
