--- a/sass/style.sass
+++ b/sass/style.sass
@@ -311,3 +311,40 @@ footer
     letter-spacing: 3.6px
     text-transform: uppercase
     color: #FFFFFF
+
+.search-result
+  position: fixed
+  top: 65px
+  left: 175px
+  width: 300px
+  min-height: 80px
+  z-index: 1
+  background: rgba(255, 255, 255, 0.8)
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: space-evenly
+  flex-wrap: nowrap
+  border-radius: 0px 0px 10px 10px
+  img
+    width: 80px
+    height: 80px
+  div
+    width: 100%
+    height: 80px
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-evenly
+    flex-wrap: nowrap
+    cursor: pointer
+    &:nth-child(odd)
+      background: rgba(235, 235, 235, 0.8)
+    &:last-child
+      border-radius: 0px 0px 10px 10px
+  p
+    font-family: "Rubik", sans-serif
+    font-size: 18px
+    line-height: 24px
+  h3
+    font-size: 16px
