--- a/sass/style.sass
+++ b/sass/style.sass
@@ -283,7 +283,7 @@ footer
   z-index: 1
   background: #fff
   padding: 25px 25px 0px 25px
-  h3
+  .item-name
     font-family: 'Rubik'
     font-style: normal
     font-weight: 500
@@ -369,6 +369,8 @@ footer
   height: auto
   align-items: end
   justify-content: space-evenly
+  padding-bottom: 15px
+  border-bottom: 1px solid #D8D8D8
 
 .controls-share-icons
   display: flex
@@ -384,3 +386,64 @@ footer
     cursor: pointer
     &:last-child
       width: 20px
+
+.similar-product
+  position: relative
+  width: 300px
+  height: 300px
+  z-index: 1
+  display: flex
+  flex-direction: column
+  flex-wrap: nowrap
+  align-items: center
+  justify-content: space-evenly
+  margin-top: 25px
+  cursor: pointer
+  transition-duration: .5s
+  &:hover
+    opacity: 0.8
+    transition-duration: .5s
+  img
+    width: 220px
+    height: 220px
+    position: relative
+    background: #EBEBEB
+    border-radius: 15px
+  p
+    font-family: "Rubik", sans-serif
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
+    line-height: 24px
+    color: #404165
+    margin-top: 25px
+
+.product-text-block
+  display: flex
+  flex-direction: row
+  flex-wrap: nowrap
+  align-items: baseline
+  justify-content: space-evenly
+  height: auto
+  width: 100%
+  h3
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
+    line-height: 24px
+    color: #202525
+    margin: 0
+  p
+    margin: 0
+
+.product-title
+  font-family: 'Rubik', sans-serif
+  font-style: normal
+  font-weight: 500
+  font-size: 14px
+  line-height: 27px
+  color: #202525
+  mix-blend-mode: normal
+  opacity: 0.7
+  align-self: flex-start
