--- a/sass/style.css
+++ b/sass/style.css
@@ -706,5 +706,6 @@ footer {
   opacity: 0.7;
   -ms-flex-item-align: start;
       align-self: flex-start;
+  margin-left: 50px;
 }
 /*# sourceMappingURL=style.css.map */
