--- a/sass/style.css
+++ b/sass/style.css
@@ -416,9 +416,9 @@ footer {
 .page-img {
   position: absolute;
   top: 50%;
-  left: 25%;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
+  left: 50%;
+  -webkit-transform: translate(-100%, -50%);
+          transform: translate(-100%, -50%);
 }
 
 .page-controls {
@@ -558,6 +558,11 @@ footer {
   font-size: 16px;
 }
 
+.product-info {
+  border-bottom: 1px solid #D8D8D8;
+  position: relative;
+}
+
 .controls-share {
   margin-top: 25px;
   display: -webkit-box;
@@ -578,7 +583,6 @@ footer {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   padding-bottom: 15px;
-  border-bottom: 1px solid #D8D8D8;
 }
 
 .controls-share-icons {
@@ -644,8 +648,8 @@ footer {
 }
 
 .similar-product img {
-  width: 220px;
-  height: 220px;
+  width: 300px;
+  height: 260px;
   position: relative;
   background: #EBEBEB;
   border-radius: 15px;
@@ -674,9 +678,9 @@ footer {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   height: auto;
   width: 100%;
 }
@@ -706,6 +710,6 @@ footer {
   opacity: 0.7;
   -ms-flex-item-align: start;
       align-self: flex-start;
-  margin-left: 40px;
+  margin-left: 0px;
 }
 /*# sourceMappingURL=style.css.map */
