--- a/sass/style.sass
+++ b/sass/style.sass
@@ -271,8 +271,8 @@ footer
 .page-img
   position: absolute
   top: 50%
-  left: 25%
-  transform: translate(0%, -50%)
+  left: 50%
+  transform: translate(-100%, -50%)
 
 .page-controls
   width: 370px
@@ -360,6 +360,10 @@ footer
   h3
     font-size: 16px
 
+.product-info
+  border-bottom: 1px solid #D8D8D8
+  position: relative
+
 .controls-share
   margin-top: 25px
   display: flex
@@ -370,7 +374,6 @@ footer
   align-items: end
   justify-content: space-evenly
   padding-bottom: 15px
-  border-bottom: 1px solid #D8D8D8
 
 .controls-share-icons
   display: flex
@@ -404,8 +407,8 @@ footer
     opacity: 0.8
     transition-duration: .5s
   img
-    width: 220px
-    height: 220px
+    width: 300px
+    height: 260px
     position: relative
     background: #EBEBEB
     border-radius: 15px
@@ -423,7 +426,7 @@ footer
   flex-direction: row
   flex-wrap: nowrap
   align-items: baseline
-  justify-content: space-evenly
+  justify-content: space-between
   height: auto
   width: 100%
   h3
@@ -447,4 +450,4 @@ footer
   mix-blend-mode: normal
   opacity: 0.7
   align-self: flex-start
-  margin-left: 40px
+  margin-left: 0px
