--- a/sass/style.css
+++ b/sass/style.css
@@ -731,6 +731,26 @@ footer {
   position: relative;
   top: calc(50% - 225px);
   z-index: 15;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.order-block:nth-child(2) {
+  margin-top: -50px;
 }
 
 .order-block .block-close {
@@ -740,5 +760,21 @@ footer {
   top: 10px;
   right: 10px;
   cursor: pointer;
+}
+
+.block-text {
+  font-family: 'Rubik', sans-serif;
+  margin-top: 40px;
+}
+
+.block-text p {
+  font-family: 'Rubik', sans-serif;
+  padding: 5px;
+  font-weight: 400;
+}
+
+.block-text p:nth-child(2) {
+  font-size: 24px;
+  font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
