--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,5 +1,10 @@
 @font-face {
   font-family: 'Rubik';
-  src: url("./Rubik-Regular.ttf");
+  src: url("./Rubik-Regular.woff");
+}
+
+@font-face {
+  font-family: 'Graphik';
+  src: url("./GraphikRegular.woff");
 }
 /*# sourceMappingURL=fonts.css.map */
