--- a/fonts/fonts.sass
+++ b/fonts/fonts.sass
@@ -1,3 +1,7 @@
 @font-face
   font-family: 'Rubik'
-  src: url("./Rubik-Regular.ttf")
+  src: url("./Rubik-Regular.woff")
+
+@font-face
+  font-family: 'Graphik'
+  src: url("./GraphikRegular.woff")
