--- a/sass/style.css
+++ b/sass/style.css
@@ -13,6 +13,21 @@
   text-decoration: none;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:link {
+  color: inherit;
+  text-decoration: none;
+}
+
 html, body {
   width: 100%;
   height: 100%;
