--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,16 @@
   box-shadow: none
   text-decoration: none
 
+a
+  color: inherit
+  text-decoration: none
+  &:visited
+    color: inherit
+    text-decoration: none
+  &:link
+    color: inherit
+    text-decoration: none
+
 html, body
   width: 100%
   height: 100%
