--- a/sass/contact.sass
+++ b/sass/contact.sass
@@ -159,3 +159,238 @@ button
     line-height: 15px
     ffamily: "Graphik", sans-serif
     border-radius: 4px
+
+.item-page
+  width: 100%
+  height: 100%
+  position: relative
+  background: #EBEBEB
+
+.page-img
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-100%, -50%)
+
+.page-controls
+  width: 370px
+  position: absolute
+  top: 80px
+  right: 0
+  height: calc(100% - 80px)
+  z-index: 1
+  background: #fff
+  padding: 25px 25px 0px 25px
+  .item-name
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 500
+    font-size: 24px
+    line-height: 36px
+    color: #202525
+    user-select: text
+  p
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 400   
+    font-size: 16px
+    line-height: 24px
+    color: #404165
+    margin-top: 25px
+    user-select: text
+  button
+    background: #212121
+    border-radius: 4px
+    width: 300px
+    height: 70px
+    box-shadow: none
+    border: none
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 500
+    font-size: 24px
+    line-height: 28px
+    text-align: center
+    letter-spacing: 3.6px
+    text-transform: uppercase
+    color: #FFFFFF
+    cursor: pointer
+    transition-duration: .5s
+    margin-top: 25px
+    &:hover
+      opacity: 0.6
+      transition-duration: .5s
+
+.search-result
+  position: fixed
+  top: 65px
+  left: 175px
+  width: 300px
+  min-height: 80px
+  z-index: 1
+  background: rgba(255, 255, 255, 0.8)
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: space-evenly
+  flex-wrap: nowrap
+  border-radius: 0px 0px 10px 10px
+  img
+    width: 80px
+    height: 80px
+  div
+    width: 100%
+    height: 80px
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-evenly
+    flex-wrap: nowrap
+    cursor: pointer
+    &:nth-child(odd)
+      background: rgba(235, 235, 235, 0.8)
+    &:last-child
+      border-radius: 0px 0px 10px 10px
+  p
+    font-family: "Rubik", sans-serif
+    font-size: 18px
+    line-height: 24px
+  h3
+    font-size: 16px
+
+.product-info
+  border-bottom: 1px solid #D8D8D8
+  position: relative
+
+.controls-share
+  margin-top: 25px
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+  width: 200px
+  height: auto
+  align-items: end
+  justify-content: space-evenly
+  padding-bottom: 15px
+
+.controls-share-icons
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+  align-items: center
+  justify-content: space-evenly
+  width: 100px
+  height: 30px
+  img
+    width: 16px
+    height: 16px
+    cursor: pointer
+    &:last-child
+      width: 20px
+
+.similar-product
+  position: relative
+  width: 300px
+  height: 300px
+  z-index: 1
+  display: flex
+  flex-direction: column
+  flex-wrap: nowrap
+  align-items: center
+  justify-content: space-evenly
+  margin-top: 25px
+  cursor: pointer
+  transition-duration: .5s
+  &:hover
+    opacity: 0.8
+    transition-duration: .5s
+  img
+    width: 300px
+    height: 260px
+    position: relative
+    background: #EBEBEB
+    border-radius: 15px
+  p
+    font-family: "Rubik", sans-serif
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
+    line-height: 24px
+    color: #404165
+    margin-top: 25px
+
+.product-text-block
+  display: flex
+  flex-direction: row
+  flex-wrap: nowrap
+  align-items: baseline
+  justify-content: space-between
+  height: auto
+  width: 100%
+  h3
+    font-family: 'Rubik'
+    font-style: normal
+    font-weight: 400
+    font-size: 16px
+    line-height: 24px
+    color: #202525
+    margin: 0
+  p
+    margin: 0
+
+.product-title
+  font-family: 'Rubik', sans-serif
+  font-style: normal
+  font-weight: 500
+  font-size: 14px
+  line-height: 27px
+  color: #202525
+  mix-blend-mode: normal
+  opacity: 0.7
+  align-self: flex-start
+  margin-left: 0px
+
+.order
+  width: 100vw
+  height: 100vh
+  z-index: 10
+  background: transparent
+  top: 0
+  left: 0
+  position: fixed
+
+.order-block
+  width: 600px
+  height: 450px
+  background: #fff
+  border-radius: 10px
+  position: relative
+  top: calc(50% - 225px)
+  z-index: 15
+  display: flex
+  flex-direction: column
+  flex-wrap: nowrap
+  align-items: center
+  justify-content: center
+  text-align: center
+  &:nth-child(2)
+    margin-top: -50px
+  .block-close
+    width: 15px
+    height: 20px
+    position: absolute
+    top: 10px
+    right: 10px
+    cursor: pointer
+
+.block-text
+  font-family: 'Rubik', sans-serif
+  margin-top: 40px
+  p
+    font-family: 'Rubik', sans-serif
+    padding: 5px
+    font-weight: 400
+    &:nth-child(2)
+      font-size: 24px
+      font-weight: bold
+    
