--- a/sass/style.css
+++ b/sass/style.css
@@ -31,6 +31,7 @@ a:link {
 html, body {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 h3 {
@@ -70,6 +71,35 @@ header input {
   font-size: 16px;
   font-weight: 400;
   border-radius: 10px;
+}
+
+main {
+  height: auto;
+  width: 90%;
+  position: relative;
+}
+
+footer {
+  width: 100%;
+  height: 150px;
+  background: #212121;
+  position: relative;
+  margin-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header-search-block {
@@ -119,12 +149,6 @@ header input {
   position: absolute;
   top: 35px;
   right: 125px;
-}
-
-main {
-  height: auto;
-  width: 90%;
-  position: relative;
 }
 
 .main-bg {
@@ -291,29 +315,6 @@ main {
   font-size: 16px;
   line-height: 24px;
   color: #464646;
-}
-
-footer {
-  width: 100%;
-  height: 150px;
-  background: #212121;
-  position: relative;
-  margin-top: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .footer-contacts {
@@ -791,5 +792,138 @@ footer {
 .block-text p:nth-child(2) {
   font-size: 24px;
   font-weight: bold;
+}
+
+.header-menu {
+  display: none;
+}
+
+@media all and (max-width: 600px) {
+  footer {
+    display: none;
+  }
+  .main-shop {
+    margin-left: 3vw;
+  }
+  .header-pages {
+    display: none;
+  }
+  .header-search-block {
+    width: 380px;
+  }
+  .header-search-block img {
+    margin: 0px 15px 0px 10px;
+  }
+  .header-menu {
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 25px;
+    right: 20px;
+  }
+  .header-menu img {
+    trsition-duration: .5s;
+  }
+  .header-menu img:hover {
+    opacity: 0.8;
+    -webkit-transition-duration: .5s;
+            transition-duration: .5s;
+  }
+  .menu-block {
+    width: 400px;
+    height: 100%;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 10;
+  }
+  .menu-block img {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  .menu-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-top: 230px;
+  }
+  .menu-content p {
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 32px;
+    color: #202525;
+    margin-top: 70px;
+  }
+  .header-search-block {
+    margin-left: 0px;
+    left: 0;
+  }
+  .header-search-block input {
+    width: 235px;
+    left: 0;
+    margin-left: 0;
+  }
+  .main-bg {
+    margin-left: 0;
+  }
+  .main-bg img {
+    width: 400px;
+    height: 200px;
+  }
+  .search-result {
+    left: 50%;
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
+  }
+  .shop-items {
+    margin-left: 0;
+  }
+  .shop-item {
+    margin-left: 0;
+    width: 380px;
+  }
+  .shop-item img {
+    width: 380px;
+  }
+  .filters-category {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    margin-left: 0;
+  }
+  .filters-category div {
+    width: 88px;
+    margin: 5px;
+    text-align: center;
+  }
+  .filters-price {
+    margin-left: 5px;
+  }
+  .footer-email {
+    display: none;
+  }
+  main {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
