--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,6 +20,7 @@ a
 html, body
   width: 100%
   height: 100%
+  position: relative
 
 h3
   font-family: "Rubik", sans-serif
@@ -50,6 +51,23 @@ header
     font-weight: 400
     border-radius: 10px
 
+main
+  height: auto
+  width: 90%
+  position: relative
+
+footer
+  width: 100%
+  height: 150px
+  background: #212121
+  position: relative
+  margin-top: 25px
+  display: flex
+  flex-direction: row
+  flex-wrap: nowrap
+  align-items: center
+  justify-content: space-between
+
 .header-search-block
   display: flex
   flex-direction: row
@@ -74,11 +92,6 @@ header
   position: absolute
   top: 35px
   right: 125px
-
-main
-  height: auto
-  width: 90%
-  position: relative
 
 .main-bg
   margin-top: 150px
@@ -189,18 +202,6 @@ main
     font-size: 16px
     line-height: 24px
     color: #464646
-
-footer
-  width: 100%
-  height: 150px
-  background: #212121
-  position: relative
-  margin-top: 25px
-  display: flex
-  flex-direction: row
-  flex-wrap: nowrap
-  align-items: center
-  justify-content: space-between
 
 .footer-contacts
   width: 250px
@@ -505,4 +506,110 @@ footer
     &:nth-child(2)
       font-size: 24px
       font-weight: bold
+
+.header-menu
+  display: none
     
+@media all and (max-width: 600px)
+
+  footer
+    display: none
+
+  .main-shop
+    margin-left: 3vw
+
+  .header-pages
+    display: none
+
+  .header-search-block
+    width: 380px
+    img
+      margin: 0px 15px 0px 10px
+
+  .header-menu
+    display: block
+    width: 30px
+    height: 30px
+    position: absolute
+    top: 25px
+    right: 20px
+    img
+      trsition-duration: .5s
+      &:hover
+        opacity: 0.8
+        transition-duration: .5s
+
+  .menu-block
+    width: 400px
+    height: 100%
+    background: #fff
+    position: fixed
+    top: 0
+    right: 0
+    z-index: 10
+    img
+      position: absolute
+      top: 20px
+      right: 20px
+
+  .menu-content
+    display: flex
+    flex-direction: column
+    flex-wrap: nowrap
+    align-items: start
+    justify-content: space-evenly
+    margin-top: 230px
+    p
+      font-family: 'Rubik', sans-serif
+      font-style: normal
+      font-weight: 400
+      font-size: 32px
+      line-height: 32px
+      color: #202525
+      margin-top: 70px
+
+  .header-search-block
+    margin-left: 0px
+    left: 0
+    input
+      width: 235px
+      left: 0
+      margin-left: 0
+
+  .main-bg
+    margin-left: 0
+    img
+      width: 400px
+      height: 200px
+
+  .search-result
+    left: 50%
+    transform: translate(-50%, 0%)
+
+  .shop-items
+    margin-left: 0
+
+  .shop-item
+    margin-left: 0
+    width: 380px
+    img
+      width: 380px
+
+  .filters-category
+    display: grid
+    grid-template-columns: repeat(4, 1fr)
+    grid-template-rows: 1fr 1fr
+    margin-left: 0
+    div
+      width: 88px
+      margin: 5px
+      text-align: center
+
+  .filters-price
+    margin-left: 5px
+
+  .footer-email
+    display: none
+
+  main
+    width: 100%
