--- a/sass/style.css
+++ b/sass/style.css
@@ -802,9 +802,6 @@ footer {
   footer {
     display: none;
   }
-  .main-shop {
-    margin-left: 3vw;
-  }
   .header-pages {
     display: none;
   }
@@ -820,7 +817,7 @@ footer {
     height: 30px;
     position: absolute;
     top: 25px;
-    right: 20px;
+    right: 10px;
   }
   .header-menu img {
     trsition-duration: .5s;
@@ -831,7 +828,7 @@ footer {
             transition-duration: .5s;
   }
   .menu-block {
-    width: 400px;
+    width: 100%;
     height: 100%;
     background: #fff;
     position: fixed;
@@ -854,13 +851,14 @@ footer {
             flex-direction: column;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
     margin-top: 230px;
+    position: relative;
   }
   .menu-content p {
     font-family: 'Rubik', sans-serif;
@@ -883,8 +881,11 @@ footer {
   .main-bg {
     margin-left: 0;
   }
+  .main-bg h3 {
+    width: 275px;
+  }
   .main-bg img {
-    width: 400px;
+    width: 100%;
     height: 200px;
   }
   .search-result {
@@ -896,19 +897,26 @@ footer {
     margin-left: 0;
   }
   .shop-item {
+    left: 50%;
+    width: 90%;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
     margin-left: 0;
-    width: 380px;
   }
   .shop-item img {
-    width: 380px;
+    width: 100%;
+    height: 80%;
+  }
+  .shop-filter {
+    width: 90%;
   }
   .filters-category {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
-    -ms-grid-rows: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
     margin-left: 0;
   }
   .filters-category div {
