--- a/sass/style.sass
+++ b/sass/style.sass
@@ -512,9 +512,6 @@ footer
     
 @media all and (max-width: 600px)
 
-  footer
-    display: none
-
   .header-pages
     display: none
 
@@ -619,3 +616,10 @@ footer
 
   main
     width: 100%
+
+  .footer-contacts
+    left: 0
+    img
+      margin-right: 0
+    .contacts
+      margin-left: 0
