--- a/sass/about.sass
+++ b/sass/about.sass
@@ -333,3 +333,16 @@ p
 .active-page
   h3
     border-bottom: 1px solid #E5E7EF
+
+@media all and (max-width: 600px)
+  main
+    flex-direction: column-reverse
+    img
+      width: 90%
+      height: 90%
+
+  h3
+    margin-top: 20px
+
+  .main-text
+    margin: 5px
