added hamburger menu on about page

--- a/sass/style.css
+++ b/sass/style.css
@@ -804,6 +804,13 @@ footer {
   }
   .header-search-block {
     width: 380px;
+    margin-left: 0px;
+    left: 0;
+  }
+  .header-search-block input {
+    width: 235px;
+    left: 0;
+    margin-left: 0;
   }
   .header-search-block img {
     margin: 0px 15px 0px 10px;
@@ -817,7 +824,8 @@ footer {
     right: 10px;
   }
   .header-menu img {
-    trsition-duration: .5s;
+    -webkit-transition-duration: .5s;
+            transition-duration: .5s;
   }
   .header-menu img:hover {
     opacity: 0.8;
@@ -865,15 +873,6 @@ footer {
     line-height: 32px;
     color: #202525;
     margin-top: 70px;
-  }
-  .header-search-block {
-    margin-left: 0px;
-    left: 0;
-  }
-  .header-search-block input {
-    width: 235px;
-    left: 0;
-    margin-left: 0;
   }
   .main-bg {
     margin-left: 0;
