--- a/sass/style.sass
+++ b/sass/style.sass
@@ -517,6 +517,12 @@ footer
 
   .header-search-block
     width: 380px
+    margin-left: 0px
+    left: 0
+    input
+      width: 235px
+      left: 0
+      margin-left: 0
     img
       margin: 0px 15px 0px 10px
 
@@ -528,7 +534,7 @@ footer
     top: 25px
     right: 10px
     img
-      trsition-duration: .5s
+      transition-duration: .5s
       &:hover
         opacity: 0.8
         transition-duration: .5s
@@ -562,14 +568,6 @@ footer
       line-height: 32px
       color: #202525
       margin-top: 70px
-
-  .header-search-block
-    margin-left: 0px
-    left: 0
-    input
-      width: 235px
-      left: 0
-      margin-left: 0
 
   .main-bg
     margin-left: 0
