--- a/sass/about.css
+++ b/sass/about.css
@@ -534,13 +534,97 @@ p {
 }
 
 @media all and (max-width: 600px) {
+  .header-pages {
+    display: none;
+  }
+  .header-search-block {
+    width: 380px;
+    margin-left: 0px;
+    left: 0;
+  }
+  .header-search-block input {
+    width: 235px;
+    left: 0;
+    margin-left: 0;
+  }
+  .header-search-block a {
+    margin: 0px 15px 0px 10px;
+  }
+  .header-search-block img {
+    margin: 0;
+  }
+  .header-menu {
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 25px;
+    right: 10px;
+  }
+  .header-menu img {
+    -webkit-transition-duration: .5s;
+            transition-duration: .5s;
+  }
+  .header-menu img:hover {
+    opacity: 0.8;
+    -webkit-transition-duration: .5s;
+            transition-duration: .5s;
+  }
+  .menu-block {
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 10;
+  }
+  .menu-block img {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  .menu-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-top: 230px;
+    position: relative;
+  }
+  .menu-content p {
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 32px;
+    color: #202525;
+    margin-top: 70px;
+  }
+  .search-result {
+    left: 50%;
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
+  }
   main {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
+    width: 100%;
   }
-  main img {
+  main .main-img {
     width: 90%;
     height: 90%;
   }
