--- a/sass/about.sass
+++ b/sass/about.sass
@@ -335,9 +335,74 @@ p
     border-bottom: 1px solid #E5E7EF
 
 @media all and (max-width: 600px)
+
+  .header-pages
+    display: none
+
+  .header-search-block
+    width: 380px
+    margin-left: 0px
+    left: 0
+    input
+      width: 235px
+      left: 0
+      margin-left: 0
+    a
+      margin: 0px 15px 0px 10px
+    img
+      margin: 0
+
+  .header-menu
+    display: block
+    width: 30px
+    height: 30px
+    position: absolute
+    top: 25px
+    right: 10px
+    img
+      transition-duration: .5s
+      &:hover
+        opacity: 0.8
+        transition-duration: .5s
+
+  .menu-block
+    width: 100%
+    height: 100%
+    background: #fff
+    position: fixed
+    top: 0
+    right: 0
+    z-index: 10
+    img
+      position: absolute
+      top: 20px
+      right: 20px
+
+  .menu-content
+    display: flex
+    flex-direction: column
+    flex-wrap: nowrap
+    align-items: center
+    justify-content: space-evenly
+    margin-top: 230px
+    position: relative
+    p
+      font-family: 'Rubik', sans-serif
+      font-style: normal
+      font-weight: 400
+      font-size: 32px
+      line-height: 32px
+      color: #202525
+      margin-top: 70px
+
+  .search-result
+    left: 50%
+    transform: translate(-50%, 0%)
+
   main
     flex-direction: column-reverse
-    img
+    width: 100%
+    .main-img
       width: 90%
       height: 90%
 
