--- a/sass/contact.sass
+++ b/sass/contact.sass
@@ -394,3 +394,103 @@ button
       font-size: 24px
       font-weight: bold
     
+@media all and (max-width: 600px)
+
+  .header-pages
+    display: none
+
+  .header-search-block
+    width: 380px
+    margin-left: 0px
+    left: 0
+    input
+      width: 235px
+      left: 0
+      margin-left: 0
+    a
+      margin: 0px 15px 0px 10px
+    img
+      margin: 0
+
+  .header-menu
+    display: block
+    width: 30px
+    height: 30px
+    position: absolute
+    top: 25px
+    right: 10px
+    img
+      transition-duration: .5s
+      &:hover
+        opacity: 0.8
+        transition-duration: .5s
+
+  .menu-block
+    width: 100%
+    height: 100%
+    background: #fff
+    position: fixed
+    top: 0
+    right: 0
+    z-index: 10
+    img
+      position: absolute
+      top: 20px
+      right: 20px
+
+  .menu-content
+    display: flex
+    flex-direction: column
+    flex-wrap: nowrap
+    align-items: center
+    justify-content: space-evenly
+    margin-top: 230px
+    position: relative
+    p
+      font-family: 'Rubik', sans-serif
+      font-style: normal
+      font-weight: 400
+      font-size: 32px
+      line-height: 32px
+      color: #202525
+      margin-top: 70px
+
+  .search-result
+    left: 50%
+    transform: translate(-50%, 0%)
+
+  .inputs-name
+    flex-direction: column
+
+  textarea
+    width: 21em
+
+  .main-img
+    width: 300px
+    height: 300px
+    margin-bottom: 20px
+
+  main
+    flex-direction: column-reverse
+    height: auto
+    margin-top: 150px
+    p
+      width: 90%
+    h3
+      margin-left: 10px
+
+  body
+    background: #f1f1f1
+
+  .main-inputs
+    display: flex
+    flex-direction: column
+    flex-wrap: no-wrap
+    align-items: flex-start
+    justify-content: space-evenly
+    margin-left: 15px
+    input, textarea, .inputs-name
+      margin-left: 0
+
+  .main-contact
+    width: 90%
