--- a/sass/style.css
+++ b/sass/style.css
@@ -799,6 +799,9 @@ footer {
 }
 
 @media all and (max-width: 600px) {
+  header {
+    z-index: 10;
+  }
   .header-pages {
     display: none;
   }
@@ -937,6 +940,41 @@ footer {
   }
   .footer-contacts .contacts {
     margin-left: 0;
+  }
+  .item-page {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  .page-img {
+    position: relative;
+    z-index: 5;
+    top: 60vh;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+  }
+  .page-controls {
+    position: relative;
+    top: 0;
+    left: 0;
+    margin-top: 60vh;
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
