--- a/sass/style.sass
+++ b/sass/style.sass
@@ -512,6 +512,9 @@ footer
     
 @media all and (max-width: 600px)
 
+  header
+    z-index: 10
+
   .header-pages
     display: none
 
@@ -621,3 +624,28 @@ footer
       margin-right: 0
     .contacts
       margin-left: 0
+
+  .item-page
+    display: flex
+    flex-direction: column
+    justify-content: space-evenly
+    align-items: center
+    position: relative
+    width: 100%
+    height: 100%
+
+  .page-img
+    position: relative
+    z-index: 5
+    top: 60vh
+    left: 0
+    width: 300px
+    height: 300px
+    transform: translate(0%, 0%)
+
+  .page-controls
+    position: relative
+    top: 0
+    left: 0
+    margin-top: 60vh
+    width: 100%
