--- a/sass/about.sass
+++ b/sass/about.sass
@@ -1,82 +1,4 @@
-*
-    margin: 0 auto
-    padding: 0
-    user-select: none
-    outline: none
-    box-sizing: border-box
-    box-shadow: none
-    text-decoration: none
-
-a
-    color: inherit
-    text-decoration: none
-    &:visited
-        color: inherit
-        text-decoration: none
-    &:link
-        color: inherit
-        text-decoration: none
-
-html, body
-    width: 100%
-    height: 100%
-
-h3
-    font-family: "Rubik", sans-serif
-    font-weight: 500
-    font-size: 35px
-    color: #202525
-
-header
-    width: 100%
-    height: 80px
-    position: fixed
-    top: 0
-    left: 0
-    background: rgba(255, 255, 255, 0.8)
-    z-index: 1
-    border-bottom: 1px solid #f4f4f6
-    h3
-        cursor: pointer
-        transition-duration: .5s
-        font-size: 16px
-        &:hover
-            opacity: 0.5
-            transition-duration: .5s
-    input
-        width: 300px
-        padding-left: 10px
-        border: 1px solid #e5e7ef
-        font-size: 16px
-        font-weight: 400
-        border-radius: 10px
-
-.header-search-block
-    display: flex
-    flex-direction: row
-    flex-wrap: wrap
-    align-items: stretch
-    justify-content: space-evenly
-    width: 450px
-    margin: 20px 0 0 50px
-    img
-        cursor: pointer
-
-.header-pages
-    display: flex
-    flex-direction: row
-    flex-wrap: nowrap
-    align-items: center
-    justify-content: space-evenly
-    width: 300px
-    text-transform: uppercase
-    line-height: 16.6px
-    color: #404165
-    position: absolute
-    top: 35px
-    right: 125px
-
-main
+.about
     height: auto
     width: 100%
     position: relative
