--- a/sass/style.sass
+++ b/sass/style.sass
@@ -26,6 +26,7 @@ h3
   font-family: "Rubik", sans-serif
   font-weight: 500
   font-size: 20px
+  color: #202525
 
 header
   width: 100%
@@ -44,17 +45,28 @@ header
       opacity: 0.5
       transition-duration: .5s
   input
-    width: 300px
-    padding-left: 10px
-    border: 1px solid #e5e7ef
-    font-size: 16px
-    font-weight: 400
-    border-radius: 10px
+      width: 300px
+      padding-left: 10px
+      border: 1px solid #e5e7ef
+      font-size: 16px
+      font-weight: 400
+      border-radius: 10px
 
 main
   height: auto
   width: 90%
   position: relative
+
+.about
+    height: auto
+    width: 100%
+    position: relative
+    display: flex
+    flex-direction: row
+    flex-wrap: nowrap
+    align-items: center
+    justify-content: space-evenly
+    top: 20%
 
 footer
   width: 100%
