--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,17 @@
+@mixin flexRow
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+  align-items: center
+  justify-content: start
+
+@mixin flexColumn
+  display: flex
+  flex-direction: column
+  flex-wrap: wrap
+  align-items: center
+  justify-content: center
+  
 *
   margin: 0 auto
   padding: 0
@@ -80,10 +94,8 @@ footer
     cursor: pointer
 
 .header-pages
-  display: flex
-  flex-direction: row
+  @include flexRow
   flex-wrap: nowrap
-  align-items: center
   justify-content: space-evenly
   width: 300px
   text-transform: uppercase
@@ -119,10 +131,7 @@ footer
 
 .filters-category
   margin-left: 0
-  display: flex
-  flex-direction: row
-  flex-wrap: wrap
-  align-items: center
+  @include flexRow
   justify-content: space-between
   width: 600px
 
@@ -159,11 +168,7 @@ footer
   height: 36px
 
 .shop-items
-  display: flex
-  flex-direction: row
-  flex-wrap: wrap
-  align-items: center
-  justify-content: start
+  @include flexRow
   width: 100%
   height: auto
   margin-top: 25px
